# claude-starter-kits

./: .gitignore  CLAUDE.md  Package.swift  README.md
.claude/: mcp.json
.claude/docs/: ios-simulator-mcp.md
.github/workflows/: ci.yml
StarterApp/Sources/ViewModels/: ContentViewModel.swift
StarterApp/Sources/Views/: ContentView.swift
ios-swift/: README.md  project.yml
ios-swift/.claude/docs/: swiftui-skill.md
ios-swift/StarterApp/Tests/: ContentViewModelTests.swift
nextjs/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
nextjs/.claude/: mcp.json
nextjs/.claude/docs/: next-devtools-mcp.md  shadcn-mcp.md
nextjs/.devcontainer/: devcontainer.json  post-create.sh
nextjs/.github/workflows/: ci.yml
nextjs/app/: layout.tsx  page.tsx
nextjs/app/api/hello/: route.ts
nextjs/components/: greeting.tsx
nextjs/tasks/: todo.md
nextjs/tests/: api.test.ts  page.test.tsx
python/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
python/.claude/: mcp.json  settings.json
python/.devcontainer/: devcontainer.json  post-create.sh
python/.github/workflows/: ci.yml
python/src/starter/: __init__.py  config.py  main.py  schemas.py
python/tests/: conftest.py  test_config.py  test_main.py
tasks/: lessons.md
